<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollingContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.ui.detail.DetailCollapseActivity"
    tools:showIn="@layout/activity_detail_collapse">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="120dp"
            android:layout_height="190dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewSmallDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imagecontent1"
                android:scaleType="fitXY"
                android:src="@color/teal_700" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title1"
                android:textSize="14sp"
                style="@style/TextSubTitleStyle"
                tools:layout_editor_absoluteX="167dp"
                tools:layout_editor_absoluteY="228dp" />

            <TextView
                android:id="@+id/movieTitleDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title2"
                style="@style/TextTitleStyle"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="167dp"
                tools:layout_editor_absoluteY="228dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date1"
                style="@style/TextSubTitleStyle"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="167dp"
                tools:layout_editor_absoluteY="228dp" />

            <TextView
                android:id="@+id/movieReleaseDateDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date2"
                style="@style/TextTitleStyle"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="307dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imbdid1"
                android:textSize="14sp"
                style="@style/TextSubTitleStyle"
                tools:layout_editor_absoluteX="167dp"
                tools:layout_editor_absoluteY="228dp" />


            <TextView
                android:id="@+id/movieAuthorDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="22sp"
                android:textStyle="bold"
                style="@style/TextTitleStyle"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="307dp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>