<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/movie"
        android:title="Movie"
        android:icon="@drawable/ic_baseline_movie_24"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/tvShow"
        android:icon="@drawable/ic_baseline_tv_24"
        android:title="TV Show"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:title="Search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"
        />

<!--    <item-->
<!--        android:id="@+id/favourite"-->
<!--        android:title="Favourite"-->
<!--        android:icon="@drawable/ic_baseline_favorite_24"-->
<!--        app:showAsAction="ifRoom"-->
<!--        />-->
</menu>